# die_to_die_algorithom

./: CMakeLists.txt  README.md  main.cpp
case/: d2d_case_bump.location  design.rule  generate_case.py
result/: README.md
src/: bump.h  designRule.h  showQT.cpp  showQT.h
